src/css/main.scss
/* ... */
.projects {
	margin: 5.5rem 0;
	padding-top: 2rem;
	padding-bottom: 0;
	background-color: $med-gray;
	position: relative;
	// Desktop ========================= //
	@media only screen and (min-width: $screen-sm-min) {
		min-height: calc(100vh - 16rem);
		padding-top: 4rem;
		padding-bottom: 0;
		display: flex;
		align-items: center;
		&:first-of-type {
			margin-top: 7.5rem;
			margin-bottom: 0;
		}
		&:last-of-type {
			margin-bottom: 8.5rem;
		}
		.row {
			position: relative;
		}
		.project-card {
			margin-bottom: 0;
		}
	}
	.project-card {
		box-shadow: 0 20px 2rem -20px rgba(0,0,0,.35);
		margin-bottom: 4rem;
		&:hover {
			cursor: pointer;
		}
		.project-thumbnail {
			width: 100%;
		}
		footer {
			background-color: $dark-gray;
			color: #fff;
			overflow: auto;
			display: flex;
			justify-content: space-between;
			.project-card__copy {
				flex-grow: 2;
				padding: 1rem;
				-webkit-transition: flex-grow .2s;
				transition: flex-grow .2s;
				will-change: flex-grow;
				h2 {
					border-bottom: 1px solid $med-dark-gray;
					padding-bottom: .5rem;
					margin-bottom: .5rem;
					color: #fff;
				}
				h3 {
					margin-bottom: 0;
					text-transform: uppercase;
					font-size: 1.4rem;
				}
			}
			.project-card__btn {
				flex-grow: 1;
				display: flex;
				flex-direction: column;
				justify-content: center;
				width: auto;
			}
		}
		&:hover {
			footer .project-card__copy {
				flex-grow: 1;
			}
		}
	}
	#project-loader {
		position: fixed;
		top: 5.5rem;
		left: 0;
		width: 100%;
		height: calc(100vh - 11rem);
		color: #fff;
		pointer-events: none;
		overflow: hidden;
		#project-content {
			@include accelerated(opacity);
			position: relative;
			z-index: 5;
			height: 100%;
			padding: 0;
			opacity: 0;
			transition: .5s opacity;
			overflow: scroll;
			&.fade-in {
				opacity: 1;
			}
			h1 {
				display: inline-block;
				margin: 0;
			}
			.project-image {
				margin-top: 5px;
			}
			// hr {
			// 	margin-top: 0;
			// }
			.container-fluid {
				padding: 0;
				.row {
					padding: 2rem 0;
					margin: 0 auto;
					max-width: 1440px;
/*
					&:nth-child(even) {
						background-color: $med-dark-gray;
					}
*/
					img {
						margin-bottom: 2rem;
					}
					.content-link {
						display: none;
					}
					.btn {
						margin-bottom: 2rem;
					}
					.mobile-banner {
						@extend .font-oswald;
						background-color: $primary-color;
						padding: 2rem;
						margin-bottom: -2rem;
						font-size: 7vw;
						text-transform: uppercase;
						text-align: center;
					}
				}
			}
		}
		// Sliding panels ========== //
		&:before, &:after {
			@include accelerated(transform);
			content: "";
			position: absolute;
			left: 0;
			width: 100%;
			background-color: $dark-gray;
			transition: transform .5s ease-in-out;
		}
		&:before {
			top: 0;
			height: calc(50vh - 5.5rem);
			transform: translateY(-100%);
		}
		&:after {
			bottom: 0;
			height: calc(50vh - 5.5rem);
			transform: translateY(100%);
		}
		.btn--js-close-project {
			@include accelerated(transform);
			float: right;
			width: auto;
			width: 20px;
			padding-top: 8px;
			transition: transform .3s;
			&:hover {
				transform: scale(1.15);
				cursor: pointer;
				line {
					stroke: $primary-color;
				}			
			}
		}
		// Desktop ========================= //
		@media only screen and (min-width: $screen-md-min) {
			top: 7.5rem;
			height: calc(100vh - 16rem);
			#project-content {
				padding: 0;
				.container-fluid {
					padding: 0;
					.row {
// 						min-height: calc(100vh - 16rem);
						padding: 4rem 2rem;
// 						margin: 0 auto;
/*
						&:nth-child(even) {
							background-color: inherit;
						}
*/
						.content-link {
							background-color: transparent;
							font-size: inherit;
							display: flex;
							justify-content: center;
							span {
								display: block;
							}
							&:hover {
								color: #fff;
								svg {
									fill: #fff;	
								}
								
							}
						}
						.mobile-banner {
							display: none;
						}
					}
				}
			}
		}
	}
	&.projects--loading-project {
		#project-loader {
			overflow-y: scroll;
			-webkit-overflow-scrolling: touch;
			pointer-events: auto;
			&:before {
				transform: translateY(0%);
			}
			&:after {
				transform: translateY(0%);
			}
		}
	}
}

